# agentb

./: .claude  .env.example  CLAUDE.md  GETTING_STARTED.md  LOGIN_GUIDE.md  NOTION_EXAMPLE.md  README.md  USAGE.md  agentb.md  login.py  pyproject.toml  requirements.txt  run_agentb.py
examples/: simple_task.py
src/agentb/: __init__.py  cli.py
src/agentb/core/: __init__.py  config.py  types.py
src/agentb/executor/: __init__.py  executor.py
src/agentb/orchestrator/: __init__.py  orchestrator.py
src/agentb/perceptor/: __init__.py  perceptor.py
src/agentb/planner/: __init__.py  planner.py
src/agentb/skills_library/: __init__.py  skills_library.py
src/agentb/state_capturer/: __init__.py  state_capturer.py
src/modules/: __init__.py  perceptor.py  state_capturer.py
src/types/: __init__.py  common.py  modules.py  plan.py
tests/: __init__.py  conftest.py  test_executor.py  test_orchestrator.py  test_perceptor.py  test_planner.py  test_skills_library.py  test_state_capturer.py
